--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,10 @@
-# Dependencies
+/.phpunit.result.cache
+/.phpunit.cache
+/.php-cs-fixer.cache
+/.php-cs-fixer.php
+/composer.lock
+/phpunit.xml
 /vendor/
-# Composer
-composer.lock
-# PHP
-*.log
-.phpunit.result.cache
-.php-cs-fixer.cache
-
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
-
-# Package specific
-*.phar
-
-# PHPStan
-.phpstan/
-
-# Pint
-.pint/
-
-# IDEs and editors
-.idea/
-.vscode/
+/.idea/
+*.swp
+*.swo
