--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": "^8.4.0"
+        "php": "^8.4.0",
+        "illuminate/support": "^12.41"
     },
     "require-dev": {
         "laravel/pint": "^1.24.0",
