--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     ],
     "require": {
         "php": "^8.4.0",
-        "illuminate/support": "^12.41",
-        "ext-fileinfo": "*"
+        "ext-fileinfo": "*",
+        "illuminate/filesystem": "^12.41",
+        "illuminate/http": "^12.41",
+        "illuminate/support": "^12.41"
     },
     "require-dev": {
         "laravel/pint": "^1.24.0",
@@ -22,9 +24,7 @@
         "pestphp/pest-plugin-type-coverage": "^4.0.2",
         "phpstan/phpstan": "^2.1.26",
         "rector/rector": "^2.1.7",
-        "symfony/var-dumper": "^7.3.3",
-        "illuminate/filesystem": "^12.41",
-        "illuminate/http": "^12.41"
+        "symfony/var-dumper": "^7.3.3"
     },
     "autoload": {
         "psr-4": {
