--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
         "illuminate/support": "^12.41"
     },
     "require-dev": {
-        "laravel/pint": "^1.24.0",
-        "peckphp/peck": "^0.1.3",
-        "pestphp/pest": "^4.1.0",
-        "pestphp/pest-plugin-type-coverage": "^4.0.2",
-        "phpstan/phpstan": "^2.1.26",
-        "rector/rector": "^2.1.7",
-        "symfony/var-dumper": "^7.3.3"
+      "laravel/pint": "^1.24.0",
+      "peckphp/peck": "^0.1.3",
+      "pestphp/pest": "^4.1.0",
+      "pestphp/pest-plugin-type-coverage": "^4.0.2",
+      "orchestra/testbench": "^10.0",
+      "phpstan/phpstan": "^2.1.26",
+      "rector/rector": "^2.1.7",
+      "symfony/var-dumper": "^7.3.3"
     },
     "autoload": {
         "psr-4": {
