--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         php: [8.4]
-        dependency-version: [prefer-stable]
+        dependency-version: [prefer-lowest, prefer-stable]
 
     name: Tests P${{ matrix.php }} - ${{ matrix.os }} - ${{ matrix.dependency-version }}
 
@@ -39,7 +39,7 @@ jobs:
           restore-keys: dependencies-php-${{ matrix.php }}-os-${{ matrix.os }}-version-${{ matrix.dependency-version }}-composer-
 
       - name: Install Composer dependencies
-        run: composer update --no-interaction --prefer-dist
+        run: composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist
 
       - name: Integration Tests
         run: php ./vendor/bin/pest
