--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "noxsi/laravel-gemininano",
     "description": "A Repo / SDK for Gemini Nano",
-    "keywords": ["php", "laravel", "gemini", "gemini-nano", "image-generator"],
+    "keywords": [
+        "php",
+        "laravel",
+        "gemini",
+        "gemini-nano",
+        "image-generator"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -17,14 +23,15 @@
         "illuminate/support": "^12.41"
     },
     "require-dev": {
-      "laravel/pint": "^1.24.0",
-      "peckphp/peck": "^0.1.3",
-      "pestphp/pest": "^4.1.0",
-      "pestphp/pest-plugin-type-coverage": "^4.0.2",
-      "orchestra/testbench": "^10.0",
-      "phpstan/phpstan": "^2.1.26",
-      "rector/rector": "^2.1.7",
-      "symfony/var-dumper": "^7.3.3"
+        "laravel/pint": "^1.24.0",
+        "peckphp/peck": "^0.1.3",
+        "pestphp/pest": "^4.1.0",
+        "pestphp/pest-plugin-type-coverage": "^4.0.2",
+        "orchestra/testbench": "^10.0",
+        "phpstan/phpstan": "^2.1.26",
+        "rector/rector": "^2.1.7",
+        "symfony/var-dumper": "^7.3.3",
+        "phpunit/phpunit": "^12.0"
     },
     "autoload": {
         "psr-4": {
