--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
         "orchestra/testbench": "^10.0",
         "phpstan/phpstan": "^2.1.26",
         "rector/rector": "^2.1.7",
-        "symfony/var-dumper": "^7.3.3",
-        "phpunit/phpunit": "^12.0"
+        "symfony/var-dumper": "^7.3.3"
     },
     "autoload": {
         "psr-4": {
